Removed DES support. Some more fixes for Java 9